[project]
name = "albertyw"
version = "1.0.0"
dependencies = [
    # Core packages
    "python-dotenv==1.2.1",             # Read environment variables from .env
    "Flask==3.1.3",                     # Web microframework
    "gunicorn==24.1.1",                 # WSGI server
    "syspath==3.0.8",                   # Modify paths

    # Features
    "feedgen==1.0.0",                   # Generate atom feeds
    "flask-sitemap==0.4.0",             # Web sitemaps
    "markdown2==2.5.4",                 # Markdown formatting
    "Pygments==2.19.2",                 # Syntax highlighting support

    # Monitoring/tracking/logging
    "blinker==1.9.0",                   # Dependency of rollbar
    "rollbar==1.3.0",                   # rollbar.com error logging
    "setproctitle==1.3.7",              # Allow gunicorn to set process title
    "varsnap==1.5.9",                   # Test discovery
]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.13.2",                 # Test coverage
    "ruff==0.14.14",                    # Python linter
    "aiohttp==3.13.2",                  # Async HTTP client for testing

    # Testing Help
    "titlecase==2.4.1",                 # Used for checking that note titles are title case

    # Types
    "mypy==1.19.1",                     # Type checking
    "types-requests==2.32.4.20250913",  # Type stubs for requests package
]

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]

[tool.setuptools]
py-modules = []
